samples/_failures_safe/1761547330_4651f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_660b7826.c: In function ‘main’:
./samples/SAFE/__tmp_660b7826.c:142:13: error: expected declaration or statement at end of input
  142 |             case 2:
      |             ^~~~
./samples/SAFE/__tmp_660b7826.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_660b7826.c:142:13: error: expected declaration or statement at end of input
